# DRF_course_work

./: .env.exmpl  Dockerfile  README.md  coverage_report.txt  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
routine/: models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
routine/migrations/: 0001_initial.py  0002_initial.py  0003_routine_reward_routine.py  0004_alter_routine_period.py  0005_alter_routine_period.py  0006_remove_routine_is_private_routine_is_public.py  0007_routine_last_reminder_routine_reminder.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_tg_id.py
